# vibl

./: .gitignore  README.md
bootloader/: CMakeLists.txt
bootloader/src/: STM32F103C8T6.ld  boot.c  boot.h  config.h  hid.c  led.c  main.c  startup.c  usb.c  usb.h
bootloader/toolchain/: gcc.cmake
cli/: Makefile  main.c
